# rust-absorption

./: .gitignore  README.md
httpie/: Cargo.toml
httpie/src/: main.rs
